--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table cellspcing="20">
         <tr>
             <td>
-        <img src="himan-modified.png" alt="profile picture">
+        <img src="mypic.png" alt="profile picture">
             <td>
                 <h1>Himanshu Shukla</h1>
                 <P><em>Full Stack Web Developer</em>
